// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transaction transforms transforms a DDE record - gmt time, no concession, email contact 1`] = `
Object {
  "createTransactionPayload": Object {
    "dataSource": "DDE File",
    "permissions": Array [
      Object {
        "issueDate": "2020-01-01T15:03:17.000Z",
        "licensee": Object {
          "birthDate": "1981-03-12",
          "country": "GB",
          "email": "festerthetester123@email.com",
          "firstName": "Fester",
          "lastName": "Tester",
          "locality": "Lower Denton, Denton",
          "postalFulfilment": false,
          "postcode": "AB123CD",
          "preferredMethodOfConfirmation": "Email",
          "preferredMethodOfNewsletter": "Email",
          "preferredMethodOfReminder": "Email",
          "premises": "PO Box 123, Flat 5, Angling House, 123",
          "street": "Redhill Park, Redhill Lane",
          "town": "Manchester",
        },
        "permitId": "permits-id",
        "startDate": "2020-01-01T00:01:00.000Z",
      },
    ],
    "serialNumber": "559136-2-27950",
  },
  "finaliseTransactionPayload": Object {
    "payment": Object {
      "amount": 3.75,
      "channelId": "123456",
      "method": "Direct debit",
      "source": "Direct Debit",
      "timestamp": "2020-01-01T15:03:17.000Z",
    },
  },
  "id": "559136-2-27950",
}
`;

exports[`transaction transforms transforms a POCL record - bst time, senior concession, sms contact 1`] = `
Object {
  "createTransactionPayload": Object {
    "dataSource": "Post Office Sales",
    "permissions": Array [
      Object {
        "concessions": Array [
          Object {
            "id": "concessions-id",
            "proof": Object {
              "referenceNumber": "N/A",
              "type": "Uncancelled Passport",
            },
          },
        ],
        "issueDate": "2020-06-01T08:00:00.000Z",
        "licensee": Object {
          "birthDate": "1931-03-12",
          "country": "GB",
          "firstName": "Fester",
          "lastName": "Tester",
          "locality": "Lower Denton, Denton",
          "mobilePhone": "07124567890",
          "postalFulfilment": false,
          "postcode": "AB123CD",
          "preferredMethodOfConfirmation": "Text",
          "preferredMethodOfNewsletter": "Text",
          "preferredMethodOfReminder": "Text",
          "premises": "PO Box 123, Flat 5, Angling House, 123",
          "street": "Redhill Park, Redhill Lane",
          "town": "Manchester",
        },
        "permitId": "permits-id",
        "startDate": "2020-05-31T23:01:00.000Z",
      },
    ],
    "serialNumber": "559136-2-27950",
  },
  "finaliseTransactionPayload": Object {
    "payment": Object {
      "amount": 3.75,
      "channelId": "123456",
      "method": "Other",
      "source": "Post Office Sales",
      "timestamp": "2020-06-01T08:00:00.000Z",
    },
  },
  "id": "559136-2-27950",
}
`;

exports[`transaction transforms transforms a POCL record - disabled concession (blue badge only), no contact 1`] = `
Object {
  "createTransactionPayload": Object {
    "dataSource": "Post Office Sales",
    "permissions": Array [
      Object {
        "concessions": Array [
          Object {
            "id": "concessions-id",
            "proof": Object {
              "referenceNumber": "12ABCD01234X5678",
              "type": "Blue Badge",
            },
          },
        ],
        "issueDate": "2020-01-01T15:03:17.000Z",
        "licensee": Object {
          "birthDate": "1931-03-12",
          "country": "GB",
          "firstName": "Fester",
          "lastName": "Tester",
          "locality": "Lower Denton, Denton",
          "postalFulfilment": false,
          "postcode": "AB123CD",
          "preferredMethodOfConfirmation": "Prefer not to be contacted",
          "preferredMethodOfNewsletter": "Prefer not to be contacted",
          "preferredMethodOfReminder": "Prefer not to be contacted",
          "premises": "PO Box 123, Flat 5, Angling House, 123",
          "street": "Redhill Park, Redhill Lane",
          "town": "Manchester",
        },
        "permitId": "permits-id",
        "startDate": "2020-01-01T00:01:00.000Z",
      },
    ],
    "serialNumber": "559136-2-27950",
  },
  "finaliseTransactionPayload": Object {
    "payment": Object {
      "amount": 3.75,
      "channelId": "123456",
      "method": "Cash",
      "source": "Post Office Sales",
      "timestamp": "2020-01-01T15:03:17.000Z",
    },
  },
  "id": "559136-2-27950",
}
`;

exports[`transaction transforms transforms a POCL record - disabled concession (both), letter contact 1`] = `
Object {
  "createTransactionPayload": Object {
    "dataSource": "Post Office Sales",
    "permissions": Array [
      Object {
        "concessions": Array [
          Object {
            "id": "concessions-id",
            "proof": Object {
              "referenceNumber": "12ABCD01234X5678",
              "type": "Blue Badge",
            },
          },
        ],
        "issueDate": "2020-01-01T15:03:17.000Z",
        "licensee": Object {
          "birthDate": "1931-03-12",
          "country": "GB",
          "firstName": "Fester",
          "lastName": "Tester",
          "locality": "Lower Denton, Denton",
          "postalFulfilment": false,
          "postcode": "AB123CD",
          "preferredMethodOfConfirmation": "Letter",
          "preferredMethodOfNewsletter": "Letter",
          "preferredMethodOfReminder": "Letter",
          "premises": "PO Box 123, Flat 5, Angling House, 123",
          "street": "Redhill Park, Redhill Lane",
          "town": "Manchester",
        },
        "permitId": "permits-id",
        "startDate": "2020-01-01T00:01:00.000Z",
      },
    ],
    "serialNumber": "559136-2-27950",
  },
  "finaliseTransactionPayload": Object {
    "payment": Object {
      "amount": 3.75,
      "channelId": "123456",
      "method": "Cash",
      "source": "Post Office Sales",
      "timestamp": "2020-01-01T15:03:17.000Z",
    },
  },
  "id": "559136-2-27950",
}
`;

exports[`transaction transforms transforms a POCL record - disabled concession (pip only), multiple contact 1`] = `
Object {
  "createTransactionPayload": Object {
    "dataSource": "Post Office Sales",
    "permissions": Array [
      Object {
        "concessions": Array [
          Object {
            "id": "concessions-id",
            "proof": Object {
              "referenceNumber": "QQ123456C",
              "type": "National Insurance Number",
            },
          },
        ],
        "issueDate": "2020-01-01T15:03:17.000Z",
        "licensee": Object {
          "birthDate": "1931-03-12",
          "country": "GB",
          "email": "festerthetester456@email.com",
          "firstName": "Fester",
          "lastName": "Tester",
          "locality": "Lower Denton, Denton",
          "mobilePhone": "07124567891",
          "postalFulfilment": false,
          "postcode": "AB123CD",
          "preferredMethodOfConfirmation": "Text",
          "preferredMethodOfNewsletter": "Email",
          "preferredMethodOfReminder": "Text",
          "premises": "PO Box 123, Flat 5, Angling House, 123",
          "street": "Redhill Park, Redhill Lane",
          "town": "Manchester",
        },
        "permitId": "permits-id",
        "startDate": "2020-01-01T00:01:00.000Z",
      },
    ],
    "serialNumber": "559136-2-27950",
  },
  "finaliseTransactionPayload": Object {
    "payment": Object {
      "amount": 3.75,
      "channelId": "123456",
      "method": "Cash",
      "source": "Post Office Sales",
      "timestamp": "2020-01-01T15:03:17.000Z",
    },
  },
  "id": "559136-2-27950",
}
`;

exports[`transaction transforms transforms a POCL record - gmt time, no concession, email contact 1`] = `
Object {
  "createTransactionPayload": Object {
    "dataSource": "Post Office Sales",
    "permissions": Array [
      Object {
        "issueDate": "2020-01-01T15:03:17.000Z",
        "licensee": Object {
          "birthDate": "1981-03-12",
          "country": "GB",
          "email": "festerthetester123@email.com",
          "firstName": "Fester",
          "lastName": "Tester",
          "locality": "Lower Denton, Denton",
          "postalFulfilment": false,
          "postcode": "AB123CD",
          "preferredMethodOfConfirmation": "Email",
          "preferredMethodOfNewsletter": "Email",
          "preferredMethodOfReminder": "Email",
          "premises": "PO Box 123, Flat 5, Angling House, 123",
          "street": "Redhill Park, Redhill Lane",
          "town": "Manchester",
        },
        "permitId": "permits-id",
        "startDate": "2020-01-01T00:01:00.000Z",
      },
    ],
    "serialNumber": "559136-2-27950",
  },
  "finaliseTransactionPayload": Object {
    "payment": Object {
      "amount": 3.75,
      "channelId": "123456",
      "method": "Cash",
      "source": "Post Office Sales",
      "timestamp": "2020-01-01T15:03:17.000Z",
    },
  },
  "id": "559136-2-27950",
}
`;
